--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     ports:
       - "3001:3001"
     volumes:
-      - /app/node_modules
-      - .:/app
+      - /app1/node_modules
+      - .:/app1
