--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,12 @@ services:
     volumes:
       - /app1/node_modules
       - .:/app1
+
+  tests:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /app/node_modules
+      - .:/app
+    command: ["npm", "run", "test"]
