--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 script:
   - docker run -e CI=true abhilekh7k/docker-react npm run test -- --coverage
 deploy: 
-  provider: elasticbeanstack
+  provider: elasticbeanstalk 
   region: "us-east-2"
   app: "dockerReact"
   env: "Dockerreact-env"
