--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ before_install:
 script:
   - docker run -e CI=true abhilekh7k/docker-react npm run test -- --coverage
 deploy: 
-  provider: elasticbeanstalk 
+  provider: elasticbeanstalk
+  access_key_id: $ACCESSKEYID
+  secret_access_key:
+    secure: "$SECRETACCESSKEY" 
   region: "us-east-2"
   app: "dockerReact"
   env: "Dockerreact-env"
@@ -16,7 +19,3 @@ deploy:
   bucket_path: "dockerReact"
   on:
     branch: master
-    access_key_id: 
-      secure: "$AWS_ACCESS_KEY"
-    secret_access_key:
-      secure: "$AWS_SECRET_KEY"
